# openttd-knetn

./: main.py  pyproject.toml  towns.grf  towns.pnml  towns.txt
lang/: english.lng
