[tool.poetry]
name = "geonames-extract-py"
version = "0.1.0"
description = ""
authors = ["kiobu <kiobu@sdf.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
nml = "^0.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
